template/discuzx5/common/extend_common.css
:root {
    --dz-bodybg:{BGCOLOR};
    --dz-color:{MENUBGCOLOR};
    --dz-alink:{LINK};
    --dz-ahover: var(--dz-color);
    --dz-ahot:{NOTICETEXT};
    --dz-fa:{TABLETEXT};
    --dz-fb:{MIDTEXT};
    --dz-fc:{LIGHTTEXT};
    --dz-fd:{LIGHTLINK};
    --dz-ff:{WRAPBG};
    --dz-nvbg:{MENUBGCOLOR};
    --dz-nvtxt:{MENUTEXT};
    --dz-nvbga:{MENUHOVERBGCOLOR};
    --dz-nvtxta:{MENUHOVERTEXT};
    --dz-bga:{CONTENTSEPARATE};
    --dz-bgb:{TITLEBGCOLOR};
    --dz-bgc:{COMMONBG};
    --dz-bgd:{SPECIALBG};
    --dz-bgf:{WRAPBG};
    --dz-bgfglass:rgba(255,255,255,.4);
    --dz-bgbglass:rgba(0,0,0,.4);
    --dz-btnbg:{BTNBG};
    --dz-btntxt:{BTNTXT};
    --dz-btnbga:{BTNBGA};
    --dz-btntxta:{BTNTXTA};
    --dz-bordera:{WRAPBORDERCOLOR};
    --dz-borderb:{COMMONBORDER};
    --dz-borderc:{INPUTBORDER};
    --dz-borderd:{SPECIALBORDER};
    --dz-radius-x:3px;
    --dz-radius-s:4px;
    --dz-radius-m:8px;
    --dz-radius-xl:10px;
    --dz-radius-l:2px;
    --dz-radius-a:50%;
    --dz-radius-b:4px;
    --dz-radius-c:40px;
    --dz-shadow:0 0 2px 0 rgba(88,118,138,.1);
    }



html{overflow-y:scroll}
body {background:var(--dz-bodybg)}
body, button, select {font:1em/1.5 var(--common-font),zh,"Noto Colr Emoji Glyf","Twemoji Country Flags",system-ui,-apple-system,BlinkMacSystemFont,times,serif;color:#000}
input, textarea {font:1em/1.5 monospace,zh,"Noto Colr Emoji Glyf","Twemoji Country Flags"}
textarea {color:var(--dz-fa)}
ul,li{list-style:none}
a {color:var(--dz-alink)}
a:hover {color:var(--dz-ahover);text-decoration:none}
.xi1, .onerror, .rq, .emfont {color:var(--dz-ahot)}
.xg1, .xg1 a {color:var(--dz-fc) !important}
a.xg1:hover, .xg1 a:hover {color:var(--dz-ahover) !important}
.xg1 .xi2, .xi2, .xi2 a, .xi3 a {color:var(--dz-fb) !important}
.xg2 {color:var(--dz-fc)}
.bm, .bn, .km_mbm {margin-bottom:15px}
hr.da, .btda, .a_t td {border-color:var(--dz-borderb)}
input::placeholder {color:var(--dz-fd)}
textarea::placeholder {color:var(--dz-fc)}
input:focus{border-color:var(--dz-color) !important;outline:none}
body .km_pnbtn {background:var(--dz-btnbga);color:var(--dz-btntxta) !important}
.km_label {margin-right:10px;line-height:34px}
.a_mu {background:none;border-width:0px}
.a_h {padding-top:0}
.a_t td {background:var(--dz-bgf);padding:8px 10px}
img[src*="smiley"] {max-width:26px !important;max-height:26px !important;vertical-align:middle}
img[src*="verify"] {max-height:16px !important;margin-right:4px}
img[src*="static/image/poke"] {max-width:22px !important;max-height:22px !important}
.dz_bm, .appl, .ct2 .mn .bm, .ct2 .sd .bm, .ct2_a .mn, .ct2_a .dz_phbbox .bm, .ct3_a .mn, .ct3_a .sd, .pg_spacecp #ct.wp .mn .bm, .pg_post #ct.ct2_a .bm, #scbar, #online.bm, .bm.lk, .km_nox, .bm.kmbm_ca {border:none !important;box-shadow:var(--dz-shadow)}
.pg_ranklist .ct2_a .dz_phbbox, #ct.wp .mn .bm.bw0 {box-shadow:none;overflow:hidden}
.mn, .ct2 .sd {overflow:visible}
.ct2_a, .ct3_a {background:none;border:none}
.ct2 .sd {width:250px}
.ct2 .mn {width:735px;margin-bottom:0}
.ct2 .sd .bm_c {padding:10px 20px;overflow:hidden}
.ct3_a .sd {width:250px;margin-bottom:15px;background:var(--dz-bgf);border:1px solid var(--dz-borderb);border-radius:var(--dz-radius-m)}
.ct3_a .mn {width:570px;margin-left:15px;background:var(--dz-bgf);border:1px solid var(--dz-borderb);padding:20px 0 15px !important;border-radius:var(--dz-radius-m)}
.ct3_a .pbm .bw0 {padding:0 20px !important}
.ct3_a .pbm .bw0 .tb {margin-top:0}
.ct2_a .tb {margin-top:10px}
.ct2 .sd #g_top .bm_c {padding:15px 20px}
.bw0 {background:none !important}
.dz_pg_space .ct2_a .pbm .bw0 .ct2_a .tb {margin-top:10px}
.dz_pg_space .ct2_a .pbm .bw0 {margin-bottom:0}
.ct2_a .mn, #nv_userapp .ct2_a .mn, .ct2_a_r .mn {margin:0 0 15px 0;padding:10px 20px;background:var(--dz-bgf);border:1px solid var(--dz-borderb);border-radius:var(--dz-radius-m)}
.ct2_a .mn .bbda.pbm.mbm {margin-top:4px;font-size:14px;padding-bottom:15px !important}
.ct2_a .mn .bm .bmn {padding:10px}
.ct2_a .mn .bm .tbmu {padding-top:10px !important}
.ct2_a .mn .bm .scf {padding-top:10px !important}
.ct2_a .mn .bm .scf h2 {display:none}
.ct2_a .mn .bm .scf .bm.bmn {margin-left:18px;padding:0 10px;border:none !important;background:none !important;box-shadow:none !important}
.appl {padding:10px 0;width:148px;background:var(--dz-bgf);border:none;margin-bottom:15px;border-radius:var(--dz-radius-m)}
.appl li {height:40px;line-height:40px;padding:0 20px}
.appl hr.da {margin:0 15px}
.tbn {margin:-6px 0 0}
.tbn .mt {padding:0 0 15px 0;margin:10px 20px 8px;font-weight:400;border-bottom:1px solid var(--dz-borderb)}
.dz_wide .tbn .mt {padding:0 0 18px 0;margin:14px 20px 8px}
.tbn li {height:40px;margin:0;border-bottom:none;padding:0}
.tbn ul a {height:40px;line-height:40px;padding:0 20px}
.tbn li.a {padding:0;border:none;background:none;margin:0}
.tbn li.a a {color:var(--dz-color);font-weight:400}
.tbn ul a strong {float:right;font-weight:400}
.tbn ul a .km_num {float:right;margin-top:14px;padding:0 5px;height:14px;line-height:14px;font-size:12px;background:var(--dz-ahot);color:var(--dz-ff);border-radius:var(--dz-radius-c)}
.appl span {line-height:40px;padding-right:0;margin-top:0 !important}
.appl span.y.mtn {margin-right:20px;color:var(--dz-fc)}
.appl img {margin-right:8px}
.dz_pg_space .appl span {padding-right:0}
#nv_home .ct3_a .sd .bm {padding:0 20px;margin-right:0}
#nv_home .ct3_a .sd .bm .bm_h {margin:0}
#nv_home .ct3_a .sd .bm_c {padding:10px 0 0}
#postsmiliesdiv_tb {width:368px !important}
#contentsmiliesdiv_tb {width:368px !important}
#postimg_menu, #sendimg_menu {width:292px !important}
#e_hide_menu {width:300px !important}
.discuzx5 {display: flex;flex-direction: column;min-height: 100vh;}
.discuzx5 #wp {flex: 1;}
#fastpostsmiliesdiv #fastpostsmiliesdiv_tb li:last-child, #e_sml_menu #smiliesdiv_tb li:last-child, #replysmiliesdiv_tb li:last-child, #sightmlsmiliesdiv_tb li:last-child, .tb_s li:last-child {margin-right:0}
.tb_s a {padding:0 12px}
/* ... */

